# authlib

./: pyproject.toml  tox.ini
.github/workflows/: python.yml
authlib/integrations/httpx_client/: _compat.py  assertion_client.py  oauth1_client.py  oauth2_client.py  utils.py
authlib/oauth2/rfc7523/: token.py
authlib/oauth2/rfc9068/: token.py
docs/basic/: install.rst
docs/oauth1/client/: index.rst
docs/oauth1/client/http/: api.rst  httpx.rst  index.rst
docs/oauth1/client/web/: starlette.rst
docs/oauth2/client/: index.rst
docs/oauth2/client/http/: api.rst  httpx.rst  index.rst
docs/oauth2/client/web/: starlette.rst
docs/upgrades/: changelog.rst
tests/clients/test_httpx/: test_assertion_client.py  test_async_assertion_client.py  test_async_oauth1_client.py  test_async_oauth2_client.py  test_compat.py  test_oauth1_client.py  test_oauth2_client.py
tests/clients/test_starlette/: test_oauth_client.py  test_user_mixin.py
tests/flask/test_oauth2/: test_jwt_bearer_grant.py
tests/flask/test_oauth2/rfc9068/: test_resource_server.py  test_token_generation.py  test_token_introspection.py  test_token_revocation.py
